# invite-code-client

./: .dockerignore  .gitignore  .prettierignore  Caddyfile  Cargo.toml  Dockerfile  README.md  Trunk.toml  docker-compose.yml  eslint.config.js  flake.nix  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml  release.yml
assets/: sw.js
electron/: main.js  preload.cjs
src/: App.test.tsx  App.tsx  api.test.ts  api.ts  app.rs  home_page.rs  login_page.rs  main.rs  qr_validate_page.rs  qr_verify_page.rs  styles.rs  util.rs
src/test/: setup.ts
web_demo/: index.html
