[package]
name = "InviteCodeClient"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { version = "0.31.0" }
egui_extras = {  version = "0.31.1", features = ["default", "image"] }
eframe = { version = "0.31.0", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
env_logger = "0.11.7"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "time"] }
reqwest = { version = "0.12.14", features = ["json", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
totp-rs = { version = "5.6.0" , features = ["qr"]}
image = "0.25.5"