[package]
name = "InviteCodeClient"
version = "0.1.0"
edition = "2024"
include = [
    "**/*.rs",
    "Cargo.toml",
]
license = "MIT"

[dependencies]
egui_extras = { version = "0.33.3", features = ["default", "image"] }
eframe = { version = "0.33.3", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
env_logger = "0.11.7"
reqwest = { version = "0.13.1", features = ["json", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
totp-rs = { version = "5.6.0" , features = ["qr"]}
log = "0.4.26"
tracing = "0.1.41"
chrono = { version = "0.4.40", features = ["serde"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "time"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.70", features = ["Navigator", "Clipboard", "Window"] }              # to access the DOM (to hide the loading text)
tokio = { version = "1.40.0", features = ["rt", "time"] }

# cross compilation
[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH"
]

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH"
]

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH"
]
